fix(Dialog): fix Safari issue not able to scroll
This PR fixes an issue where the Dialog component did not scroll when there was content that overflows the Dialog on the Safari iOS browser.

--- a/packages/dnb-eufemia/src/components/dialog/style/_dialog.scss
+++ b/packages/dnb-eufemia/src/components/dialog/style/_dialog.scss
@@ -17,7 +17,6 @@
 
 .dnb-dialog {
   position: relative;
-  max-height: 100vh;
   border-radius: 0.5rem;
   @include defaultDropShadow();
 
@@ -25,6 +24,21 @@
   -webkit-user-select: text; // Safari / Touch fix
   border: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+
+  max-height: 100vh;
+  overflow: hidden;
+  .dnb-scroll-view {
+    max-height: 100vh; // make it scrollable
+  }
+
+  &__inner {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+    width: 100%;
+    height: 100%;
+  }
 
   &--information {
     min-width: var(--dialog-min-width);
@@ -34,7 +48,8 @@
 
   &--confirmation {
     max-width: var(--dialog-confirm-max-width);
-    margin: 0 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
 
   &--auto-fullscreen {
@@ -82,26 +97,6 @@
 
     @include IS_SAFARI_MOBILE {
       padding-bottom: calc(var(--dialog-spacing) * 8);
-    }
-  }
-
-  &__inner {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-
-    &::after {
-      content: '';
-      position: absolute;
-      z-index: -4;
-      left: 0;
-      top: 0;
-      width: 100vw;
-      height: 100%;
     }
   }
 
